welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:1: error: ';' expected but ',' found.
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {true, false}
                                                               ^